# SagittaSBR

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  config.txt  cudart  env.profile  hitable.h  hitable_list.h  integral.h  job.slurm  main.cu  outfile.out  outfile.txt  plotRCS.py  ray.h  rcs_results.csv  rcs_results1.csv  rcs_results2.csv  rcs_results_FULLA380.csv  report1.nsys-rep  report2.nsys-rep  results_freq_scans.csv  slurm-17212048.out  slurm-17218552.out  slurm-17218796.out  slurm-17218863.out  slurm-17221840.out  slurm-17257727.out  slurm-17302147.out  slurm-17310952.out  slurm-17313532.out  sphere.h
assets/: config.txt
assets/old_mains/: main_coolPrints.cu  main_monostatic.cu  main_monostatic_old.cu  main_notes.cu  main_old.cu
include/: config_parser.h  cuda_utils.h  hitable_list.h  po_kernels.cuh  printing_utils.h  ray.h  ray_kernels.cuh  sphere.h  vec3.h  world_setup.cuh
include/RT/: hitable.h  hitable_list.h  precision.h  ray.h  sphere.h  triangle.h  vec3.h
include/app/: config.hpp  deviceBuffers.hpp  print.hpp  rtRcsEntry.hpp
include/cuda/: cudaUtils.cuh  gpuConfig.cuh  poKernels.cuh  rtKernels.cuh
include/hip/: hipifly.hpp
include/model/: modelLoader.hpp
include/scene/: bvh.h  bvhBuilder.hpp  world.cuh
include/sim/: sweep.hpp
old_mains/: README.md  main_monostatic.cu  main_old.cu
openspec/: project.md
openspec/changes/add-model-loader-triangles/: design.md  tasks.md
openspec/changes/archive/2026-01-15-add-model-loader-triangles/: proposal.md
openspec/changes/archive/2026-01-15-add-model-loader-triangles/specs/model-loading/: spec.md
openspec/changes/archive/2026-01-15-add-model-loader-triangles/specs/triangle-geometry/: spec.md
openspec/changes/archive/2026-01-15-add-sah-bvh-builder/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-15-add-sah-bvh-builder/specs/cpu-bvh-preprocess/: spec.md
openspec/changes/archive/2026-01-15-move-bvh-preprocess-cpu/: tasks.md
openspec/changes/archive/2026-01-15-move-bvh-preprocess-cpu/specs/cpu-bvh-preprocess/: spec.md
openspec/changes/move-bvh-preprocess-cpu/: design.md  proposal.md
openspec/changes/move-bvh-preprocess-cpu/specs/gpu-bvh-tracing/: spec.md
openspec/specs/cpu-bvh-preprocess/: spec.md
openspec/specs/gpu-bvh-tracing/: spec.md
openspec/specs/model-loading/: spec.md
openspec/specs/triangle-geometry/: spec.md
output/: rcs_results.csv  results_freq_scans.csv  results_freq_scans_full.csv
src/: RT-RCS.cpp  config_parser.cpp  cuda_utils.cu  hitable_list.cu  main.cu  main_newOpt.cu  main_polariz.cu  main_preOpt.cu  main_std.cu  modelLoader.cpp  po_kernels.cu  printing_utils.cpp  ray_kernels.cu  sphere.cu  world_setup.cu
src/app/: config.cpp  deviceBuffers.cu  print.cpp  rtRcsEntry.cu  sweep copy.cu  sweep.cu
src/cuda/: cudaUtils.cu  poKernels.cu  rtKernels.cu
src/scene/: bvhBuilder.cpp  world.cu
tools/: monostatic_PEC_sphere.py  plotRCS.py  run_freq_scan.sh
unused/: aabb.h  box.h
util/: monostatic_PEC_sphere.py  monostatic_PEC_sphere_mod.py  objGen.py  plotRCS.py  plotRCS2d.py  plotRCS3d.py  run_freq_scan.sh
